2009-06-18  Mark Wielaard  <mark@klomp.org>

	* netx/net/sourceforge/jnlp/services/XExtendedService.java
	(openFile): Remove @Override of interface method.
	(openFiles): Likewise.

2009-08-04  Andrew John Hughes  <ahughes@redhat.com>

	* patches/icedtea-webstart.patch,
	* patches/icedtea-liveconnect.patch:
	Recreated against OpenJDK7.
	
2009-06-05  Omair Majid  <omajid@redhat.com>

	* patches/icedtea-webstart.patch: Make javax.jnlp package visible to
	javac.

2009-06-12  Omair Majid  <omajid@redhat.com>

	* patches/icedtea-liveconnect.patch: Make netscape.javascript package
	visible to javac by adding it to the non-core package list.

2009-07-29  Omair Majid  <omajid@redhat.com>

	* netx/net/sourceforge/jnlp/IconDesc.java: Add new icon kind SHORTCUT.
	* netx/net/sourceforge/jnlp/Launcher.java: Move StreamEater class to ...
	* netx/net/sourceforge/jnlp/StreamEater.java: New file.
	* netx/net/sourceforge/jnlp/resources/Messages.properties: Add
	SDesktopShortcut.
	* netx/net/sourceforge/jnlp/runtime/ApplicationInstance.java
	(initialize): Call addMenuAndDesktopEntries.
	(addMenuAndDesktopEntries): New function.
	* netx/net/sourceforge/jnlp/security/SecurityWarningDialog.java: Add
	CREATE_DESKTOP_SHORTCUT to AccessType.
	* netx/net/sourceforge/jnlp/security/AccessWarningPane.java
	(installComponents): Add a case for CREATE_DESKTOP_SHORTCUT
	* netx/net/sourceforge/jnlp/services/ServiceUtil.java
	Remove duplicate enum AccessType.
	(checkAccess): New function.
	(checkAccess): Add a new argument app.
	* netx/net/sourceforge/jnlp/services/SingleInstanceLock.java
	(getLockFileName): Call FileUtils.sanitizeFileName to sanitize the 
	filename.
	* netx/net/sourceforge/jnlp/util/FileUtils.java: New file.
	* netx/net/sourceforge/jnlp/util/XDesktopEntry.java: New file. 

2009-07-29  Omair Majid  <omajid@redhat.com>

	* netx/net/sourceforge/jnlp/security/VariableX509TrustManager.java
	(checkServerTrusted): Synchronize the function.

2009-07-23  Deepak Bhole  <dbhole@redhat.com>
